--- a/node-course/web-server/views/about.hbs
+++ b/node-course/web-server/views/about.hbs
@@ -9,8 +9,9 @@
 
 <body>
 
-    <h1>About</h1>
+    <h1>{{title}}</h1>
     <img src="/img/f.jpg">
+    <p>Created by {{name}}</p>
 </body>
 
 </html>
