Coder Maricar Guelas templates

--- a/node-course/web-server/templates/views/404.hbs
+++ b/node-course/web-server/templates/views/404.hbs
@@ -3,14 +3,14 @@
 <html>
 
 <head>
-    <title>Help</title>
+    <title>404</title>
     <link rel="stylesheet" href="/css/styles.css">
     </head>
+
 <body>
-    <div class="main-content">
-        {{>header}}
-    <p>{{helpText}}</p>
-    </div>
+    
+   {{>header}}
+   <p>{{errorMessage}}</p>
     {{>footer}}
 </body>
 
