--- a/node-course/web-server/templates/partials/header.hbs
+++ b/node-course/web-server/templates/partials/header.hbs
@@ -1,1 +1,8 @@
-<h1>Static Header.hbs Text</h1>
+<header>
+    <h1>{{title}}</h1>
+    
+    <a href="/">Weather</a>
+    <a href="/About">About</a>
+    <a href="/Help">Help</a>
+
+</header>
