--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -3,15 +3,18 @@
 <html>
 
 <head>
+    <title>About</title>
     <link rel="stylesheet" href="/css/styles.css"> 
 
     </head>
 
 <body>
+    <div class="main-content">
+        {{>header}}
+    <img src"portrait" src="/img/f.jpg">
+    </div>
 
-    {{>header}}
-    <img src="/img/f.jpg">
-    <p>Created by {{name}}</p>
+    {{>footer}}
 </body>
 
 </html>
