--- a/node-course/web-server/templates/views/index.hbs
+++ b/node-course/web-server/templates/views/index.hbs
@@ -3,14 +3,18 @@
 <html>
 
 <head>
+    <title>Weather</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
     </head>
 
 <body>
+    <div class="main-content">
+        {{>header}}
+        <p>Use this site to get your weather</p>
+    </div>
     
-   {{>header}}
-    <p>Created by {{name}}</p>
+    {{>footer}}
 </body>
 
 </html>
