style of weather app

--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-    <img src"portrait" src="/img/f.jpg">
+    <img src"landscape" src="/img/f.jpg">
     </div>
 
     {{>footer}}
