--- a/node-course/web-server/templates/partials/header.hbs
+++ b/node-course/web-server/templates/partials/header.hbs
@@ -2,7 +2,7 @@
     <h1>{{title}}</h1>
     
     <a href="/">Weather</a>
-    <a href="/About">About</a>
-    <a href="/Help">Help</a>
+    <a href="/about">About</a>
+    <a href="/help">Help</a>
 
 </header>
