Styling the Application

--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -4,6 +4,7 @@
 
 <head>
     <title>About</title>
+    <link rel="icon"href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css"> 
 
     </head>
@@ -11,7 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-    <img src"landscape" src="/img/f.jpg">
+    <img class="portrait" src="/img/f.jpg">
     </div>
 
     {{>footer}}
