--- a/node-course/web-server/templates/views/404.hbs
+++ b/node-course/web-server/templates/views/404.hbs
@@ -4,13 +4,17 @@
 
 <head>
     <title>404</title>
+    <link rel="icon"href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
     </head>
 
 <body>
+    <dv class="main-content">
     
    {{>header}}
-   <p>{{errorMessage}}</p>
+   <p>{{errorMessage}}</p> 
+
+   </dv>
     {{>footer}}
 </body>
 
