--- a/node-course/web-server/templates/views/index.hbs
+++ b/node-course/web-server/templates/views/index.hbs
@@ -4,6 +4,7 @@
 
 <head>
     <title>Weather</title>
+    <link rel="icon"href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
     </head>
