--- a/node-course/web-server/public/css/styles.css
+++ b/node-course/web-server/public/css/styles.css
@@ -1,17 +1,22 @@
 body {
-    color: #333333;
+    color: #000000;
     font-family: arial;
     max-width: 650px;
     margin: 0 auto;
    padding: 0 16px;
 
    display: flex;
+   background-color: rgb(206, 201, 201);
+  
    flex-direction: column;
+   height: 0;
    min-height: 100vh;
 }
 
 .main-content {
     flex-grow: 1;
+    align-items: center;
+
 }
 
     footer {
@@ -19,12 +24,14 @@ body {
        border-top: 1px solid #eeeeee;
        margin-top: 16px;
        padding: 16px 0;
+       align-items: right;
 
     }
 
     header {
         margin-top: 16px;
         margin-bottom: 48px;
+        align-items: center;
     }
 
     h1 {
@@ -33,25 +40,30 @@ body {
     }
 
     header a {
-        color: #888888;
+        color: #000;
         margin-right: 16px;
         text-decoration: none;
     }
 
     .portrait  {
         width: 250px;
+       
 
     }
 
     input {
         border: 1px solid #cccccc;
         padding: 8px;
+        border:1px solid #000000;
+
+
     }
     button {
 
             cursor: pointer;
-            border:1px solid #888888;
-            background: #888888;
+            border:1px solid #fffafa;
+            background: #000000;
             color: white;
             padding: 8px;
+            align-items: center;
         }
