--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -13,6 +13,7 @@
     <div class="main-content">
         {{>header}}
     <img class="portrait" src="/img/f.jpg">
+    <h6>LELAC GOZARIN</h6>
    
     </div>
 
