--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>About</title>
+    <title>About us</title>
     <link rel="icon"href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css"> 
 
@@ -12,10 +12,25 @@
 <body>
     <div class="main-content">
         {{>header}}
-    <img class="portrait" src="/img/f.jpg">
-    <h6>LELAC GOZARIN</h6>
+    <img class="portrait" src="/img/lelac.jpg", >
+    <h6>Lelac G Gozarin</h6>
    
     </div>
+
+ <div class="main-content">
+    <img class="portrait" src="/img/maricar.jpg">
+    <h6>Maricar D Guelas</h6>
+   </div>
+
+    <div class="main-content">
+    <img class="portrait" src="/img/ybonne.jpg">
+    <h6>Mary-bon Delavin</h6>
+   </div>
+
+    <div class="main-content">
+    <img class="portrait" src="/img/cyril.jpg">
+    <h6>Cyril Mari Dacanay</h6>
+   </div>
 
     {{>footer}}
 </body>
