--- a/node-course/web-server/public/css/styles.css
+++ b/node-course/web-server/public/css/styles.css
@@ -1,21 +1,27 @@
 body {
-    color: #000000;
+    color: #3ea53e;
     font-family: arial;
     max-width: 650px;
     margin: 0 auto;
    padding: 0 16px;
+   align-items: center;
 
    display: flex;
+
    background-color: rgb(206, 201, 201);
-  
    flex-direction: column;
    height: 0;
    min-height: 100vh;
+  
 }
+
+
+
+
 
 .main-content {
     flex-grow: 1;
-    align-items: center;
+ 
 }
 
     footer {
@@ -30,12 +36,13 @@ body {
     header {
         margin-top: 16px;
         margin-bottom: 48px;
-        align-items: center;
+        
     }
 
     h1 {
         font-size: 64px;
         margin-bottom: 16px;
+        
     }
 
     header a {
@@ -45,8 +52,8 @@ body {
     }
 
     .portrait  {
-        width: 250px;
-        border-radius: 100px;
+        width: 100px;
+        border-radius: 250px;
        
 
     }
