--- a/node-course/web-server/templates/partials/header.hbs
+++ b/node-course/web-server/templates/partials/header.hbs
@@ -1,8 +1,11 @@
 <header>
-    <h1>{{title}}</h1>
+    <center>
+        <h1>{{title}}</h1>
 
     <a href="/">Weather</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
-
+    
+    </center>  
+<hr>
 </header>
