--- a/node-course/web-server/templates/views/index.hbs
+++ b/node-course/web-server/templates/views/index.hbs
@@ -7,6 +7,7 @@
     <link rel="icon"href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 
+
     </head>
 
 <body>
@@ -21,6 +22,8 @@
         </form>
         <p id="message-1"></p>
         <p id="message-2"></p>
+        <p id="message-3"></p>
+        <p id="message-4"></p>
     </div>
     
     {{>footer}}
