Set up for Heroku

--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This cite was created by lelac gozarin, et al. It uses data from mapbox.com and weatherstack.com.</p>
     <img class="portrait" src="/img/lelac.jpg", >
     <h6>Lelac G Gozarin</h6>
    
