--- a/node-course/web-server/templates/partials/header.hbs
+++ b/node-course/web-server/templates/partials/header.hbs
@@ -2,9 +2,9 @@
     <center>
         <h1>{{title}}</h1>
 
-    <a href="/">Weather</a>
+    <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/help">Help</a>
+    {{!-- <a href="/help">Help</a> --}}
     
     </center>  
 <hr>
