--- a/node-course/web-server/public/css/styles.css
+++ b/node-course/web-server/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    color: #3ea53e;
+    
     font-family: arial;
     max-width: 650px;
     margin: 0 auto;
@@ -7,21 +7,33 @@ body {
    align-items: center;
 
    display: flex;
-
+    /* background: url(../img/bg-img.jpg) no-repeat;
+    background-position: center; */
+    
    background-color: rgb(206, 201, 201);
    flex-direction: column;
    height: 0;
-   min-height: 100vh;
-  
+   min-height: 100vh; 
 }
-
-
-
-
-
+.main-content p, .main-content form {
+    display: flex;
+    justify-content: center;
+    color: #636e72;
+    font-size: 20px;
+    padding-top: 20px;
+    margin: 0;
+}
+.main-content p:nth-child(1) {
+    margin-top: 30px;
+}
+.main-content p:nth-child(3) {
+    font-size: 40px;
+    font-weight: 600;
+    color: #2d3436;
+    margin: 0;
+}
 .main-content {
     flex-grow: 1;
- 
 }
 
     footer {
@@ -35,20 +47,22 @@ body {
 
     header {
         margin-top: 16px;
-        margin-bottom: 48px;
+        margin-bottom: 25px;
         
     }
 
     h1 {
         font-size: 64px;
         margin-bottom: 16px;
-        
-    }
+        color: #0d70bd;
+    }s
 
     header a {
         color: #000;
         margin-right: 16px;
         text-decoration: none;
+        font-weight: 600;
+        font-size: 22px;
     }
 
     .portrait  {
@@ -59,18 +73,17 @@ body {
     }
 
     input {
-        border: 1px solid #cccccc;
-        padding: 8px;
-        border:1px solid #000000;
-
-
+        width: 200px;
+        height: 28px;
+        margin-right: 5px;
+        font-weight: 600;
     }
     button {
-
-            cursor: pointer;
-            border:1px solid #fffafa;
-            background: #000000;
-            color: white;
-            padding: 8px;
-            align-items: center;
-        }
+        cursor: pointer;
+        border: 1px solid #fffafa;
+        background: #414242;
+        color: white;
+        padding: 8px;
+        align-items: center;
+        font-weight: 700;
+    }
