--- a/node-course/web-server/templates/views/about.hbs
+++ b/node-course/web-server/templates/views/about.hbs
@@ -12,25 +12,63 @@
 <body>
     <div class="main-content">
         {{>header}}
+      
         <p>This cite was created by lelac gozarin, et al. It uses data from mapbox.com and weatherstack.com.</p>
+
+        <center>
     <img class="portrait" src="/img/lelac.jpg", >
-    <h6>Lelac G Gozarin</h6>
-   
+</center>
+<center>
+<b>
+    <h7>Lelac G Gozarin</h7>
+    </b>
+    <h6>COURSE: BSIT 4B </h6>
+    <h6>AGE: 22 years old </h6>
+    <h6>ADDRESS: San Ramon Bulan, Sorsogon</h6>
+
+   </center>
     </div>
 
  <div class="main-content">
+     <center>
     <img class="portrait" src="/img/maricar.jpg">
-    <h6>Maricar D Guelas</h6>
+    </center>
+<center>
+    <b>
+    <h7>Maricar D Guelas</h7>
+    </b>
+    <h6>COURSE: BSIT 4B </h6>
+    <h6>AGE: 22 years old </h6>
+    <h6>ADDRESS: Libertad Bulan, Sorsogon</h6>
+</center>
    </div>
 
     <div class="main-content">
+        <center>
     <img class="portrait" src="/img/ybonne.jpg">
-    <h6>Mary-bon Delavin</h6>
+    </center>
+    <center>
+    <b>
+    <h7>Mary-bon Delavin</h7>
+    </b>
+    <h6>COURSE: BSIT 4B </h6>
+    <h6>AGE: 21 years old </h6>
+    <h6>ADDRESS: Poropandan Matnog, Sorsogon</h6>
+    </center>
    </div>
 
     <div class="main-content">
+        <center>
     <img class="portrait" src="/img/cyril.jpg">
-    <h6>Cyril Mari Dacanay</h6>
+    </center>
+    <center>
+    <b>
+    <h7>Cyril Mari Dacanay</h7>
+    </b>
+    <h6>COURSE: BSIT 4B </h6>
+    <h6>AGE: 22 years old </h6>
+    <h6>ADDRESS: Libertad Bulan, Sorsogon</h6>
+    </center>
    </div>
 
     {{>footer}}
